@@ -67,8 +67,6 @@ TESTS = \
  t900 \
  t999
 
-XFAIL_TESTS += t802
-
 EXTRA_DIST = $(TESTS) \
  common common-i common-kn \
  compgate \
